# WBC-AGILE

./: .cursorignore  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LESSONS_LEARNED.md  LICENCE  README.md  pyproject.toml
agile/algorithms/evaluation/: README.md  __init__.py  episode_buffer.py  eval_config.py  evaluator.py  generate_report.py  motion_metrics_analyzer.py  plotting.py  report_generator.py  trajectory_logger.py  upload_to_wandb.py  velocity_height_scheduler.py
agile/algorithms/evaluation/configs/: README.md  default_eval.yaml
agile/algorithms/evaluation/configs/examples/: explicit_schedule_example.yaml  height_sweep.yaml  multi_env_capability_test.yaml  x_velocity_sweep.yaml  y_velocity_sweep.yaml  yaw_rate_sweep.yaml
agile/algorithms/evaluation/tests/: __init__.py  test_episode_buffer.py  test_evaluator.py  test_motion_metrics_analyzer.py
agile/algorithms/rsl_rl/: MODIFICATIONS.md
agile/algorithms/rsl_rl/rsl_rl/algorithms/: distillation.py  ppo.py
agile/algorithms/rsl_rl/rsl_rl/env/: vec_env.py
agile/data/policy/: README.md
agile/data/policy/velocity_g1/: unitree_g1_velocity_history.pt  unitree_g1_velocity_history.yaml
agile/data/policy/velocity_height_g1/: unitree_g1_velocity_height_recurrent_student.pt  unitree_g1_velocity_height_recurrent_student.yaml  unitree_g1_velocity_height_teacher.pt  unitree_g1_velocity_height_teacher.yaml
agile/data/policy/velocity_t1/: booster_t1_velocity_v0.pt  booster_t1_velocity_v0.yaml
agile/isaaclab_extras/monkey_patches/: __init__.py  contact_sensor_data_patch.py  contact_sensor_patch.py  manager_based_rl_env_patch.py  observation_manager_patch.py
agile/isaaclab_extras/utils/: io_descriptors.py
agile/rl_env/assets/robots/: booster_t1.py  unitree_g1.py
agile/rl_env/mdp/: __init__.py  terminations.py  utils.py
agile/rl_env/mdp/actions/: __init__.py  actions_cfg.py  harness_action.py  joint_pos_gui_action.py  lift_action.py  random_actions.py
agile/rl_env/mdp/actuators/: __init__.py  actuators.py  actuators_cfg.py
agile/rl_env/mdp/commands/: __init__.py  commands.py  commands_cfg.py
agile/rl_env/mdp/curriculums/: __init__.py  randomization_curriculum.py  task_curriculum.py
agile/rl_env/mdp/events/: __init__.py  events.py
agile/rl_env/mdp/observations/: __init__.py  observations_cfg.py  observations_io.py
agile/rl_env/mdp/rewards/: __init__.py  aestetic_rewards.py  regularization_rewards.py  task_rewards.py
agile/rl_env/mdp/symmetry/: __init__.py  observations.py  symmetry_g1.py  symmetry_t1.py
agile/rl_env/mdp/terrains/: __init__.py  hf_terrains.py  hf_terrains_cfg.py  terrains.py
agile/rl_env/rsl_rl/: __init__.py  exporter.py  l2c2_cfg.py  rl_cfg.py  rnd_cfg.py  symmetry_cfg.py  teacher_stundent_distillation_cfg.py  vecenv_wrapper.py
agile/rl_env/tasks/: README.md  __init__.py
agile/rl_env/tasks/debug/: __init__.py  debug_env_cfg.py
agile/rl_env/tasks/locomotion/: __init__.py
agile/rl_env/tasks/locomotion_height/: __init__.py
agile/rl_env/tasks/stand_up/: __init__.py
agile/rl_env/tests/: test_mdp_actuators.py  test_mdp_rewards.py  test_mdp_utils.py  utils.py
agile/rl_env/utils/: math_utils.py
agile/sim2mujoco/: __init__.py  actions.py  commands.py  observations.py  policy.py  simulation.py  utils.py
scripts/: README.md  cli_args.py  eval.py  export_IODescriptors.py  extract_git_info.sh  play.py  sim2mujoco_eval.py  train.py  verify_rsl_rl.py
scripts/setup/: install_deps.sh  install_deps_ci.sh  install_deps_from_pyproject.py  install_deps_local.sh  setup_hooks.sh
scripts/wandb_sweep/: README.md  init_sweep.py  run_sweep.py  sweep.yaml  train_wrapper.py
tests/: README.md  run_unit_tests.sh  test_all_tasks_e2e.py  test_deterministic_eval_e2e.py  test_e2e_ci_locally.sh  test_sim2mujoco_e2e.py
tests/test_eval_configs/: quick_test.yaml
workflows/: Dockerfile
(+36 files in other folders)
